[package]
name = "advent_of_code_2020"
version = "1.0.0"
authors = ["Matthew Thompson <mat@matthewjthompson.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc01"
path = "src/bin/aoc01/main.rs"

[dependencies]
